objects/CreditScore__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>codAccionNegocio__c</fullName>
        <label>codAccionNegocio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codAreaEmpresa__c</fullName>
        <label>codAreaEmpresa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>codCanal__c</fullName>
        <label>codCanal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>excepcion__c</fullName>
        <label>excepcion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CreditScore</label>
</CustomObject>